fix: calc display too big

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ button:hover{
     border: 0;
     margin-left: 0.25rem;
     height: 5rem;
-    width: 100%;
+    width: 90%;
 }
 
 textarea{
